# flask-swadantic

./: .gitignore  Makefile  pyproject.toml  setup.py
flask-swadantic/: __init__.py  app.py  base_schema_processor.py  info_schema.py  path.py  schema.py  swadantic.py
flask-swadantic/static/: index.css  swagger-initializer.js
flask_swadantic/: __init__.py  app.py  base_schema_processor.py  endpoint.py  schema.py  swadantic.py  swagger_bp.py  test_api.py
flask_swadantic/app/: api_bp.py  api_v1_bp.py  app.py  test_api.py  test_bp.py  user_bp.py
flask_swadantic/openapi/: __init__.py  generator.py
flask_swadantic/schema/: __init__.py  endpoint.py  pathschema.py  processor.py  schema.py
flask_swadantic/templates/: index.html
src/: __init__.py  api_spec_view.py  app.py  base_schema_processor.py  endpoint.py  query_schema.py  response_schema.py  schema.py  setup.py  swadantic.py  test_api.py
src/templates/: index.html
