[tool.poetry]
name = "flask-swadantic"
version = "1.0"
description = ""
authors = ["Lucas de Freitas Ponick <lucas_ponick@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
flask = ">=3.1.0"
pydantic = ">=2.10.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools>=75.8.0"]
build-backend = "poetry.core.masonry.api"


